# rust_opc

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust.yml
opc_ae_bindings/: Cargo.toml  README.md  build.rs
opc_ae_bindings/.metadata/: generate.proj  main.cpp
opc_ae_bindings/.windows/winmd/: OPCAE.winmd
opc_ae_bindings/src/: bindings.rs
opc_classic_utils/: Cargo.toml
opc_classic_utils/examples/: array_functions.rs
opc_classic_utils/src/: lib.rs  memory.rs
opc_classic_utils/src/memory/: array.rs  ptr.rs  ptr_array.rs  tests.rs  wstring.rs
opc_comn_bindings/: Cargo.toml  build.rs
opc_da/: Cargo.toml
opc_da/src/: builder.rs  def.rs  enumeration.rs  group.rs  item.rs  lib.rs  server.rs  utils.rs  variant.rs
opc_da/src/client/: actor.rs  com.rs  iter.rs  iterator.rs  memory.rs  mod.rs  tests.rs
opc_da/src/client/actor/: client.rs  mod.rs  server.rs
opc_da/src/client/com/: client.rs  def.rs  group.rs  iter.rs  mod.rs  server.rs
opc_da/src/client/traits/: async_io.rs  async_io2.rs  async_io3.rs  browse.rs  browse_server_address_space.rs  client.rs  common.rs  connection_point_container.rs  data_callback.rs  data_object.rs  group_state_mgt.rs  group_state_mgt2.rs  item_deadband_mgt.rs  item_io.rs  item_mgt.rs  item_properties.rs  item_sampling_mgt.rs  mod.rs  public_group_state_mgt.rs  server.rs  server_public_groups.rs  sync_io.rs  sync_io2.rs
opc_da/src/client/unified/: client.rs  group.rs  guard.rs  iter.rs  mod.rs  server.rs  tests.rs
opc_da/src/client/unified/actor/: client.rs  mod.rs  server.rs  tests.rs
opc_da/src/client/v1/: mod.rs
opc_da/src/client/v2/: mod.rs
opc_da/src/client/v3/: mod.rs
opc_da/src/com/: client.rs  connection_point.rs  enumeration.rs  group.rs  item.rs  memory.rs  mod.rs  server.rs  utils.rs  variant.rs
opc_da/src/com/base/: basic.rs  mod.rs
opc_da/src/core/: core.rs  mod.rs
opc_da/src/server/com/: connection_point.rs  enumeration.rs  group.rs  memory.rs  server.rs  utils.rs  variant.rs
opc_da/src/server/com/base/: variant.rs
opc_da/src/server/traits/: def.rs  group.rs  server.rs
opc_da/src/traits/: def.rs  group.rs  mod.rs  server.rs
opc_da/src/utils/: memory.rs  try_iterator.rs
opc_da_bindings/: Cargo.toml  README.md  build.rs
opc_da_bindings/.metadata/: OPCComn.idl  OPCDA_3.00.idl  generate.proj  main.cpp
opc_da_bindings/.windows/winmd/: OPCDA.winmd
opc_da_bindings/src/: bindings.rs
opc_hda_bindings/: Cargo.toml  README.md  build.rs
opc_hda_bindings/.metadata/: generate.proj  main.cpp
opc_hda_bindings/.windows/winmd/: OPCHDA.winmd
opc_hda_bindings/src/: bindings.rs
