[workspace]
resolver = "2"
members = [
  "opc_ae_bindings",
  "opc_comn_bindings",
  "opc_da",
  "opc_da_bindings",
  "opc_hda_bindings",
]

[workspace.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Variant",
] }
windows-bindgen = "0.62.1"
windows-core = "0.61.2"
windows-targets = "0.53.2"

[profile.dev.build-override]
debug = true
