[workspace]
resolver = "2"
members = [
  "opc_ae_bindings",
  "opc_classic_utils",
  "opc_comn_bindings",
  "opc_da",
  "opc_da_bindings",
  "opc_hda_bindings",
]

[workspace.dependencies]
actix = "0.13.5"
globset = "0.4.16"
opc_classic_utils = { version = "0.3.0", path = "opc_classic_utils" }
opc_comn_bindings = { path = "opc_comn_bindings" }
opc_da_bindings = { path = "opc_da_bindings" }
tokio = { version = "1.46.1", features = ["full"] }
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_System_WinRT",
] }
windows-bindgen = "0.62.1"
windows-core = "0.61.2"
windows-targets = "0.53.2"

[profile.dev.build-override]
debug = true
