[package]
name = "opc_da_bindings"
description = "OPC Data Access bindings"
version = "0.1.1"
license = "MIT"
edition = "2021"
repository = "https://github.com/Ronbb/rust_opc"
keywords = ["opc", "da", "opcda", "bindings"]
readme = "README.md"
exclude = [".metadata/*", ".windows/*", "build.rs"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies]
windows = { version = "0.58.0", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_WinRT",
] }
windows-core = "0.58.0"

[build-dependencies]
windows-bindgen = "0.58.0"
