[package]
name = "opc_da_bindings"
description = "OPC Data Access bindings"
version = "0.1.2"
license = "MIT"
edition = "2021"
repository = "https://github.com/Ronbb/rust_opc"
keywords = ["opc", "da", "opcda", "bindings"]
readme = "README.md"
exclude = [".metadata/*", ".windows/*", "build.rs"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies]
windows = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
] }
windows-core = "0.59.0"
windows-targets = "0.53.0"

[build-dependencies]
windows-bindgen = "0.59.0"

[profile.dev.build-override]
debug = true
