[package]
name = "opc_da_bindings"
version = "0.3.0"
edition = "2024"
description = "OPC Data Access bindings"
readme = "README.md"
repository = "https://github.com/Ronbb/rust_opc"
license = "MIT"
keywords = ["bindings", "da", "opc", "opcda"]
exclude = [".metadata/*", ".windows/*", "build.rs"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Variant",
] }
windows-core = "0.61.2"
windows-targets = "0.53.2"

[build-dependencies]
windows-bindgen = "0.62.1"

[profile.dev.build-override]
debug = true
